--- a/ASP.NET Core/JuniorAssign/JuniorAssign.Services/JuniorAssign.Services.csproj
+++ b/ASP.NET Core/JuniorAssign/JuniorAssign.Services/JuniorAssign.Services.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JuniorAssign.Data\JuniorAssign.Data.csproj" />
+  </ItemGroup>
+
 </Project>
