Add UserController/User login and register models. Add View for login and register. Add user store adn role store (implemented own user store class)

--- a/ASP.NET Core/JuniorAssign/JuniorAssign.Web/JuniorAssign.Web.csproj
+++ b/ASP.NET Core/JuniorAssign/JuniorAssign.Web/JuniorAssign.Web.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JuniorAssign.Services\JuniorAssign.Services.csproj" />
+  </ItemGroup>
+
 
 
 </Project>
